--- a/config/default-extpackages.config
+++ b/config/default-extpackages.config
@@ -7,8 +7,8 @@ EXT_PACKAGES_PATH[2]="applications/luci-app-vlmcsd"
 EXT_PACKAGES_REPOSITORIE[2]="https://github.com/coolsnowwolf/luci"
 EXT_PACKAGES_BRANCH[2]=""
 EXT_PACKAGES_NAME[3]="luci-app-webadmin"
-EXT_PACKAGES_PATH[3]="applications/luci-app-webadmin"
-EXT_PACKAGES_REPOSITORIE[3]="https://github.com/coolsnowwolf/luci"
+EXT_PACKAGES_PATH[3]="luci-app-webadmin"
+EXT_PACKAGES_REPOSITORIE[3]="https://github.com/77267132/package"
 EXT_PACKAGES_BRANCH[3]=""
 EXT_PACKAGES_NAME[4]="luci-app-cifs-mount"
 EXT_PACKAGES_PATH[4]="applications/luci-app-cifs-mount"  
@@ -56,7 +56,7 @@ EXT_PACKAGES_REPOSITORIE[14]="https://github.com/immortalwrt/luci"
 EXT_PACKAGES_BRANCH[14]=""
 EXT_PACKAGES_NAME[15]="luci-app-fileassistant"
 EXT_PACKAGES_PATH[15]="luci-app-fileassistant"
-EXT_PACKAGES_REPOSITORIE[15]="https://github.com/Lienol/openwrt-package"
+EXT_PACKAGES_REPOSITORIE[15]="https://github.com/77267132/package"
 EXT_PACKAGES_BRANCH[15]=""
 EXT_PACKAGES_NAME[16]="luci-app-passwall"
 EXT_PACKAGES_PATH[16]="luci-app-passwall"
@@ -114,3 +114,7 @@ EXT_PACKAGES_NAME[29]="luci-app-openclash"
 EXT_PACKAGES_PATH[29]="luci-app-openclash"
 EXT_PACKAGES_REPOSITORIE[29]="https://github.com/vernesong/OpenClash"
 EXT_PACKAGES_BRANCH[29]=""
+EXT_PACKAGES_NAME[30]="luci-app-arpbind"
+EXT_PACKAGES_PATH[30]="luci-app-arpbind"
+EXT_PACKAGES_REPOSITORIE[30]="https://github.com/77267132/package"
+EXT_PACKAGES_BRANCH[30]=""
