--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -586,19 +586,19 @@ jobs:
                 ls
                 rm -rf *
                 curl -s -L --retry 6 --connect-timeout 20 "https://raw.githubusercontent.com/chenmozhijin/AdGuardHome-Rules/main/AdGuardHome-dnslist(by%20cmzj).yaml" -o "AdGuardHomednslist" 
-                cat ./AdGuardHomednslist >> $OPENWRT_ROOT_PATH/files/etc/AdGuardHome-dnslist"(by cmzj)".yaml
-                echo "AdGuardHome-dnslist(by cmzj).yaml" >> $LOG_PATH/AdGuardHome.log
-                cat $OPENWRT_ROOT_PATH/files/etc/AdGuardHome-dnslist"(by cmzj)".yaml >> $LOG_PATH/AdGuardHome.log
+                cat ./AdGuardHomednslist >> $OPENWRT_ROOT_PATH/files/etc/AdGuardHome-dnslist.yaml
+                echo "AdGuardHome-dnslist.yaml" >> $LOG_PATH/AdGuardHome.log
+                cat $OPENWRT_ROOT_PATH/files/etc/AdGuardHome-dnslist.yaml >> $LOG_PATH/AdGuardHome.log
                 rm -rf $WORKSPACE_ROOT_PATH/tmp/*
                 echo "files"
                 ls -la $(find $OPENWRT_ROOT_PATH/files/ -type d)
               else
                 echo "::warning ::AdGuardHome核心不支持此架构,退出执行下载AdGuardHome核心与DNS名单。"
-                rm -rf $OPENWRT_ROOT_PATH/files/etc/AdGuardHome-dnslist\(by\ cmzj\).yaml $OPENWRT_ROOT_PATH/files/etc/AdGuardHome.yaml $OPENWRT_ROOT_PATH/files/usr/bin/AdGuardHome
+                rm -rf $OPENWRT_ROOT_PATH/files/etc/AdGuardHome-dnslist.yaml $OPENWRT_ROOT_PATH/files/etc/AdGuardHome.yaml $OPENWRT_ROOT_PATH/files/usr/bin/AdGuardHome
               fi
           else
             echo "::notice ::未检测到luci-app-adguardhome配置为编译进固件,退出执行。"
-            rm -rf $OPENWRT_ROOT_PATH/files/etc/AdGuardHome-dnslist\(by\ cmzj\).yaml $OPENWRT_ROOT_PATH/files/etc/AdGuardHome.yaml $OPENWRT_ROOT_PATH/files/usr/bin/AdGuardHome
+            rm -rf $OPENWRT_ROOT_PATH/files/etc/AdGuardHome-dnslist.yaml $OPENWRT_ROOT_PATH/files/etc/AdGuardHome.yaml $OPENWRT_ROOT_PATH/files/usr/bin/AdGuardHome
           fi
 
       - name: 下载openclash内核
