--- a/config/x86_64/OpenWrt-K/extpackages.config
+++ b/config/x86_64/OpenWrt-K/extpackages.config
@@ -86,3 +86,11 @@ EXT_PACKAGES_NAME[22]="luci-app-arpbind"
 EXT_PACKAGES_PATH[22]="luci-app-arpbind"
 EXT_PACKAGES_REPOSITORIE[22]="https://github.com/77267132/package"
 EXT_PACKAGES_BRANCH[22]=""
+EXT_PACKAGES_NAME[23]="vsftpd-alt"
+EXT_PACKAGES_PATH[23]="package/lean/vsftpd-alt"
+EXT_PACKAGES_REPOSITORIE[23]="https://github.com/coolsnowwolf/lede"
+EXT_PACKAGES_BRANCH[23]=""
+EXT_PACKAGES_NAME[24]="luci-app-vsftpd"
+EXT_PACKAGES_PATH[24]="luci-app-vsftpd"
+EXT_PACKAGES_REPOSITORIE[24]="https://github.com/77267132/package"
+EXT_PACKAGES_BRANCH[24]=""
