--- a/config/x86_64/OpenWrt-K/extpackages.config
+++ b/config/x86_64/OpenWrt-K/extpackages.config
@@ -94,3 +94,7 @@ EXT_PACKAGES_NAME[24]="luci-app-vsftpd"
 EXT_PACKAGES_PATH[24]="luci-app-vsftpd"
 EXT_PACKAGES_REPOSITORIE[24]="https://github.com/77267132/package"
 EXT_PACKAGES_BRANCH[24]=""
+EXT_PACKAGES_NAME[25]="luci-app-poweroff"
+EXT_PACKAGES_PATH[25]=""
+EXT_PACKAGES_REPOSITORIE[25]="https://github.com/77267132/luci-app-poweroff"
+EXT_PACKAGES_BRANCH[25]=""
