--- a/config/x86_64/luci.config
+++ b/config/x86_64/luci.config
@@ -46,6 +46,7 @@ CONFIG_PACKAGE_luci-app-netspeedtest=y
 CONFIG_PACKAGE_luci-app-nlbwmon=y
 CONFIG_PACKAGE_luci-app-openclash=y
 CONFIG_PACKAGE_luci-app-opkg=y
+CONFIG_PACKAGE_luci-app-poweroff=y
 CONFIG_PACKAGE_luci-app-passwall2=y
 #
 # Configuration
@@ -119,6 +120,7 @@ CONFIG_PACKAGE_luci-i18n-nlbwmon-zh-tw=y
 CONFIG_PACKAGE_luci-i18n-opkg-ja=y
 CONFIG_PACKAGE_luci-i18n-opkg-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-opkg-zh-tw=y
+CONFIG_PACKAGE_luci-i18n-poweroff-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-passwall2-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-smartdns-zh-tw=y
