--- a/config/x86_64/OpenWrt-K/extpackages.config
+++ b/config/x86_64/OpenWrt-K/extpackages.config
@@ -98,3 +98,7 @@ EXT_PACKAGES_NAME[25]="luci-app-poweroff"
 EXT_PACKAGES_PATH[25]=""
 EXT_PACKAGES_REPOSITORIE[25]="https://github.com/77267132/luci-app-poweroff"
 EXT_PACKAGES_BRANCH[25]=""
+EXT_PACKAGES_NAME[26]="luci-theme-edge"
+EXT_PACKAGES_PATH[26]=""
+EXT_PACKAGES_REPOSITORIE[26]="https://github.com/77267132/luci-theme-edge"
+EXT_PACKAGES_BRANCH[26]=""
