--- a/config/x86_64/luci.config
+++ b/config/x86_64/luci.config
@@ -76,6 +76,7 @@ CONFIG_PACKAGE_luci-app-wol=y
 #
 CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
+CONFIG_PACKAGE_luci-theme-edge=y
 # end of 4. Themes
 #
 # 5. Protocols
