--- a/config/x86_64/OpenWrt-K/extpackages.config
+++ b/config/x86_64/OpenWrt-K/extpackages.config
@@ -102,3 +102,7 @@ EXT_PACKAGES_NAME[26]="luci-theme-edge"
 EXT_PACKAGES_PATH[26]=""
 EXT_PACKAGES_REPOSITORIE[26]="https://github.com/77267132/luci-theme-edge"
 EXT_PACKAGES_BRANCH[26]=""
+EXT_PACKAGES_NAME[27]="luci-app-unblockneteasemusic"
+EXT_PACKAGES_PATH[27]=""
+EXT_PACKAGES_REPOSITORIE[27]="https://github.com/77267132/luci-app-unblockneteasemusic"
+EXT_PACKAGES_BRANCH[27]=""
