--- a/config/x86_64/OpenWrt-K/extpackages.config
+++ b/config/x86_64/OpenWrt-K/extpackages.config
@@ -106,3 +106,11 @@ EXT_PACKAGES_NAME[27]="luci-app-unblockneteasemusic"
 EXT_PACKAGES_PATH[27]=""
 EXT_PACKAGES_REPOSITORIE[27]="https://github.com/77267132/luci-app-unblockneteasemusic"
 EXT_PACKAGES_BRANCH[27]=""
+EXT_PACKAGES_NAME[28]="gowebdav"
+EXT_PACKAGES_PATH[28]="gowebdav"
+EXT_PACKAGES_REPOSITORIE[28]="https://github.com/77267132/openwrt-gowebdav"
+EXT_PACKAGES_BRANCH[28]=""
+EXT_PACKAGES_NAME[29]="luci-app-gowebdav"
+EXT_PACKAGES_PATH[29]="luci-app-gowebdav"
+EXT_PACKAGES_REPOSITORIE[29]="https://github.com/77267132/openwrt-gowebdav"
+EXT_PACKAGES_BRANCH[29]=""
