--- a/config/x86_64/network.config
+++ b/config/x86_64/network.config
@@ -151,13 +151,13 @@ CONFIG_MODEMMANAGER_WITH_QRTR=y
 CONFIG_PACKAGE_netperf=y
 CONFIG_PACKAGE_nlbwmon=y
 CONFIG_PACKAGE_proto-bonding=y
-
 CONFIG_PACKAGE_simple-obfs=y
 CONFIG_PACKAGE_smartdns=y
 CONFIG_PACKAGE_socat=y
 CONFIG_SOCAT_SSL=y
 CONFIG_PACKAGE_tcping=y
 CONFIG_PACKAGE_trojan-plus=y
+CONFIG_PACKAGE_gowebdav=y
 CONFIG_PACKAGE_vsftpd-alt=y
 CONFIG_PACKAGE_wwan=y
 CONFIG_PACKAGE_xray-core=y
