--- a/config/x86_64/network.config
+++ b/config/x86_64/network.config
@@ -144,6 +144,7 @@ CONFIG_PACKAGE_socat=y
 CONFIG_SOCAT_SSL=y
 CONFIG_PACKAGE_tcping=y
 CONFIG_PACKAGE_trojan-plus=y
+CONFIG_PACKAGE_upx=y
 CONFIG_PACKAGE_gowebdav=y
 CONFIG_PACKAGE_vsftpd-alt=y
 CONFIG_PACKAGE_wwan=y
