--- a/config/x86_64/OpenWrt-K/extpackages.config
+++ b/config/x86_64/OpenWrt-K/extpackages.config
@@ -99,8 +99,8 @@ EXT_PACKAGES_PATH[25]=""
 EXT_PACKAGES_REPOSITORIE[25]="https://github.com/77267132/luci-app-unblockneteasemusic"
 EXT_PACKAGES_BRANCH[25]=""
 EXT_PACKAGES_NAME[26]="luci-app-gowebdav"
-EXT_PACKAGES_PATH[26]="luci-app-gowebdav"
-EXT_PACKAGES_REPOSITORIE[26]="https://github.com/77267132/openwrt-gowebdav"
+EXT_PACKAGES_PATH[26]=""
+EXT_PACKAGES_REPOSITORIE[26]="https://github.com/77267132/luci-app-gowebdav"
 EXT_PACKAGES_BRANCH[26]=""
 EXT_PACKAGES_NAME[27]="wrtbwmon"
 EXT_PACKAGES_PATH[27]="wrtbwmon"
