--- a/config/default-extpackages.config
+++ b/config/default-extpackages.config
@@ -98,11 +98,11 @@ EXT_PACKAGES_NAME[25]="luci-app-unblockneteasemusic"
 EXT_PACKAGES_PATH[25]=""
 EXT_PACKAGES_REPOSITORIE[25]="https://github.com/77267132/luci-app-unblockneteasemusic"
 EXT_PACKAGES_BRANCH[25]=""
-EXT_PACKAGES_NAME[26]="gowebdav"
-EXT_PACKAGES_PATH[26]="gowebdav"
-EXT_PACKAGES_REPOSITORIE[26]="https://github.com/77267132/openwrt-gowebdav"
+EXT_PACKAGES_NAME[26]="luci-app-filebrowser"
+EXT_PACKAGES_PATH[26]=""
+EXT_PACKAGES_REPOSITORIE[26]="https://github.com/77267132/luci-app-filebrowser"
 EXT_PACKAGES_BRANCH[26]=""
-EXT_PACKAGES_NAME[27]="luci-app-gowebdav"
-EXT_PACKAGES_PATH[27]="luci-app-gowebdav"
-EXT_PACKAGES_REPOSITORIE[27]="https://github.com/77267132/openwrt-gowebdav"
+EXT_PACKAGES_NAME[27]="wrtbwmon"
+EXT_PACKAGES_PATH[27]="wrtbwmon"
+EXT_PACKAGES_REPOSITORIE[27]="https://github.com/brvphoenix/wrtbwmon"
 EXT_PACKAGES_BRANCH[27]=""
