--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -100,7 +100,7 @@ jobs:
         run: |
           git clone --depth=1 --single-branch https://github.com/coolsnowwolf/lede $DOWNLOAD_ROOT_PATH/patch/lede
           git clone --depth=1 --single-branch https://github.com/immortalwrt/packages $DOWNLOAD_ROOT_PATH/patch/immortalwrt-packages
-          git clone --depth=1 --single-branch https://github.com/77267132/turboacc -b package $DOWNLOAD_ROOT_PATH/patch/turboacc
+          git clone --depth=1 --single-branch https://github.com/77267132/turboacc $DOWNLOAD_ROOT_PATH/patch/turboacc
           git clone https://git.openwrt.org/openwrt/openwrt.git $DOWNLOAD_ROOT_PATH/openwrt
 
       - name: 导入拓展软件包
