--- a/config/x86_64/OpenWrt-K/extpackages.config
+++ b/config/x86_64/OpenWrt-K/extpackages.config
@@ -25,7 +25,7 @@ EXT_PACKAGES_BRANCH[6]=""
 EXT_PACKAGES_NAME[7]="shortcut-fe"
 EXT_PACKAGES_PATH[7]="shortcut-fe"
 EXT_PACKAGES_REPOSITORIE[7]="https://github.com/77267132/turboacc"
-EXT_PACKAGES_BRANCH[7]="package"
+EXT_PACKAGES_BRANCH[7]=""
 EXT_PACKAGES_NAME[8]="luci-app-fileassistant"
 EXT_PACKAGES_PATH[8]="luci-app-fileassistant"
 EXT_PACKAGES_REPOSITORIE[8]="https://github.com/77267132/package"
