--- a/config/default-extpackages.config
+++ b/config/default-extpackages.config
@@ -25,50 +25,50 @@ EXT_PACKAGES_BRANCH[6]=""
 EXT_PACKAGES_NAME[7]="shortcut-fe"
 EXT_PACKAGES_PATH[7]="shortcut-fe"
 EXT_PACKAGES_REPOSITORIE[7]="https://github.com/77267132/turboacc"
-EXT_PACKAGES_BRANCH[7]="package"
+EXT_PACKAGES_BRANCH[7]=""
 EXT_PACKAGES_NAME[8]="luci-app-fileassistant"
 EXT_PACKAGES_PATH[8]="luci-app-fileassistant"
 EXT_PACKAGES_REPOSITORIE[8]="https://github.com/77267132/package"
 EXT_PACKAGES_BRANCH[8]=""
-EXT_PACKAGES_NAME[9]="openwrt-passwall-packages"
-EXT_PACKAGES_PATH[9]=""
-EXT_PACKAGES_REPOSITORIE[9]="https://github.com/77267132/openwrt-passwall-packages"
+EXT_PACKAGES_NAME[9]="passwall2"
+EXT_PACKAGES_PATH[9]="passwall2"
+EXT_PACKAGES_REPOSITORIE[9]="https://github.com/77267132/package"
 EXT_PACKAGES_BRANCH[9]=""
-EXT_PACKAGES_NAME[10]="passwall2"
+EXT_PACKAGES_NAME[10]="luci-app-passwall2"
 EXT_PACKAGES_PATH[10]="luci-app-passwall2"
-EXT_PACKAGES_REPOSITORIE[10]="https://github.com/77267132/openwrt-passwall2"
+EXT_PACKAGES_REPOSITORIE[10]="https://github.com/77267132/package"
 EXT_PACKAGES_BRANCH[10]=""
 EXT_PACKAGES_NAME[11]="nft-fullcone"
-EXT_PACKAGES_PATH[11]=""
-EXT_PACKAGES_REPOSITORIE[11]="https://github.com/77267132/nft-fullcone"
+EXT_PACKAGES_PATH[11]="nft-fullcone"
+EXT_PACKAGES_REPOSITORIE[11]="https://github.com/77267132/package"
 EXT_PACKAGES_BRANCH[11]=""
 EXT_PACKAGES_NAME[12]="luci-app-turboacc"
 EXT_PACKAGES_PATH[12]="luci-app-turboacc"
-EXT_PACKAGES_REPOSITORIE[12]="https://github.com/77267132/turboacc"
+EXT_PACKAGES_REPOSITORIE[12]="https://github.com/77267132/package"
 EXT_PACKAGES_BRANCH[12]=""
 EXT_PACKAGES_NAME[13]="luci-app-adguardhome"
-EXT_PACKAGES_PATH[13]=""
-EXT_PACKAGES_REPOSITORIE[13]="https://github.com/77267132/luci-app-adguardhome"
+EXT_PACKAGES_PATH[13]="luci-app-adguardhome"
+EXT_PACKAGES_REPOSITORIE[13]="https://github.com/77267132/package"
 EXT_PACKAGES_BRANCH[13]=""
 EXT_PACKAGES_NAME[14]="luci-app-argon-config"
-EXT_PACKAGES_PATH[14]=""
-EXT_PACKAGES_REPOSITORIE[14]="https://github.com/77267132/luci-app-argon-config"
+EXT_PACKAGES_PATH[14]="luci-app-argon-config"
+EXT_PACKAGES_REPOSITORIE[14]="https://github.com/77267132/package"
 EXT_PACKAGES_BRANCH[14]=""
 EXT_PACKAGES_NAME[15]="luci-app-diskman"
-EXT_PACKAGES_PATH[15]="applications/luci-app-diskman"
-EXT_PACKAGES_REPOSITORIE[15]="https://github.com/77267132/luci-app-diskman"
+EXT_PACKAGES_PATH[15]="luci-app-diskman"
+EXT_PACKAGES_REPOSITORIE[15]="https://github.com/77267132/package"
 EXT_PACKAGES_BRANCH[15]=""
 EXT_PACKAGES_NAME[16]="luci-app-netspeedtest"
-EXT_PACKAGES_PATH[16]=""
-EXT_PACKAGES_REPOSITORIE[16]="https://github.com/77267132/netspeedtest"
+EXT_PACKAGES_PATH[16]="luci-app-netspeedtest"
+EXT_PACKAGES_REPOSITORIE[16]="https://github.com/77267132/package"
 EXT_PACKAGES_BRANCH[16]=""
 EXT_PACKAGES_NAME[17]="luci-theme-argon"
-EXT_PACKAGES_PATH[17]=""
-EXT_PACKAGES_REPOSITORIE[17]="https://github.com/77267132/luci-theme-argon"
+EXT_PACKAGES_PATH[17]="luci-theme-argon"
+EXT_PACKAGES_REPOSITORIE[17]="https://github.com/77267132/package"
 EXT_PACKAGES_BRANCH[17]=""
 EXT_PACKAGES_NAME[18]="luci-app-socat"
 EXT_PACKAGES_PATH[18]="luci-app-socat"
-EXT_PACKAGES_REPOSITORIE[18]="https://github.com/77267132/luci-app-socat"
+EXT_PACKAGES_REPOSITORIE[18]="https://github.com/77267132/package"
 EXT_PACKAGES_BRANCH[18]=""
 EXT_PACKAGES_NAME[19]="r8125"
 EXT_PACKAGES_PATH[19]=""
@@ -79,22 +79,26 @@ EXT_PACKAGES_PATH[20]="luci-app-arpbind"
 EXT_PACKAGES_REPOSITORIE[20]="https://github.com/77267132/package"
 EXT_PACKAGES_BRANCH[20]=""
 EXT_PACKAGES_NAME[21]="luci-app-poweroff"
-EXT_PACKAGES_PATH[21]=""
-EXT_PACKAGES_REPOSITORIE[21]="https://github.com/77267132/luci-app-poweroff"
+EXT_PACKAGES_PATH[21]="luci-app-poweroff"
+EXT_PACKAGES_REPOSITORIE[21]="https://github.com/77267132/package"
 EXT_PACKAGES_BRANCH[21]=""
 EXT_PACKAGES_NAME[22]="luci-theme-edge"
-EXT_PACKAGES_PATH[22]=""
-EXT_PACKAGES_REPOSITORIE[22]="https://github.com/77267132/luci-theme-edge"
+EXT_PACKAGES_PATH[22]="luci-theme-edge"
+EXT_PACKAGES_REPOSITORIE[22]="https://github.com/77267132/package"
 EXT_PACKAGES_BRANCH[22]=""
 EXT_PACKAGES_NAME[23]="luci-app-unblockneteasemusic"
-EXT_PACKAGES_PATH[23]=""
-EXT_PACKAGES_REPOSITORIE[23]="https://github.com/77267132/luci-app-unblockneteasemusic"
+EXT_PACKAGES_PATH[23]="luci-app-unblockneteasemusic"
+EXT_PACKAGES_REPOSITORIE[23]="https://github.com/77267132/package"
 EXT_PACKAGES_BRANCH[23]=""
 EXT_PACKAGES_NAME[24]="luci-app-filebrowser"
-EXT_PACKAGES_PATH[24]=""
-EXT_PACKAGES_REPOSITORIE[24]="https://github.com/77267132/luci-app-filebrowser"
+EXT_PACKAGES_PATH[24]="luci-app-filebrowser"
+EXT_PACKAGES_REPOSITORIE[24]="https://github.com/77267132/package"
 EXT_PACKAGES_BRANCH[24]=""
 EXT_PACKAGES_NAME[25]="wrtbwmon"
 EXT_PACKAGES_PATH[25]="wrtbwmon"
 EXT_PACKAGES_REPOSITORIE[25]="https://github.com/brvphoenix/wrtbwmon"
 EXT_PACKAGES_BRANCH[25]=""
+EXT_PACKAGES_NAME[26]="homebox"
+EXT_PACKAGES_PATH[26]="homebox"
+EXT_PACKAGES_REPOSITORIE[26]="https://github.com/77267132/package"
+EXT_PACKAGES_BRANCH[26]=""
