--- a/config/x86_64/OpenWrt-K/extpackages.config
+++ b/config/x86_64/OpenWrt-K/extpackages.config
@@ -102,3 +102,7 @@ EXT_PACKAGES_NAME[26]="wrtbwmon"
 EXT_PACKAGES_PATH[26]="wrtbwmon"
 EXT_PACKAGES_REPOSITORIE[26]="https://github.com/brvphoenix/wrtbwmon"
 EXT_PACKAGES_BRANCH[26]=""
+EXT_PACKAGES_NAME[27]="luci-app-gowebdav"
+EXT_PACKAGES_PATH[27]="luci-app-gowebdav"
+EXT_PACKAGES_REPOSITORIE[27]="https://github.com/77267132/package"
+EXT_PACKAGES_BRANCH[27]=""
