--- a/config/x86_64/network.config
+++ b/config/x86_64/network.config
@@ -135,6 +135,7 @@ CONFIG_MODEMMANAGER_WITH_MBIM=y
 CONFIG_MODEMMANAGER_WITH_QMI=y
 CONFIG_MODEMMANAGER_WITH_QRTR=y
 # end of Configuration
+CONFIG_PACKAGE_gowebdav=y
 CONFIG_PACKAGE_netperf=y
 CONFIG_PACKAGE_nlbwmon=y
 CONFIG_PACKAGE_proto-bonding=y
