--- a/config/x86_64/OpenWrt-K/extpackages.config
+++ b/config/x86_64/OpenWrt-K/extpackages.config
@@ -30,13 +30,13 @@ EXT_PACKAGES_NAME[8]="luci-app-netspeedtest"
 EXT_PACKAGES_PATH[8]="luci-app-netspeedtest"
 EXT_PACKAGES_REPOSITORIE[8]="https://github.com/77267132/package"
 EXT_PACKAGES_BRANCH[8]=""
-EXT_PACKAGES_NAME[9]="passwall2"
-EXT_PACKAGES_PATH[9]="passwall2"
-EXT_PACKAGES_REPOSITORIE[9]="https://github.com/77267132/package"
+EXT_PACKAGES_NAME[9]="passwall-packages"
+EXT_PACKAGES_PATH[9]=""
+EXT_PACKAGES_REPOSITORIE[9]="https://github.com/77267132/passwall-packages"
 EXT_PACKAGES_BRANCH[9]=""
-EXT_PACKAGES_NAME[10]="luci-app-passwall2"
+EXT_PACKAGES_NAME[10]="passwall2"
 EXT_PACKAGES_PATH[10]="luci-app-passwall2"
-EXT_PACKAGES_REPOSITORIE[10]="https://github.com/77267132/package"
+EXT_PACKAGES_REPOSITORIE[10]="https://github.com/77267132/passwall2"
 EXT_PACKAGES_BRANCH[10]=""
 EXT_PACKAGES_NAME[11]="luci-app-poweroff"
 EXT_PACKAGES_PATH[11]="luci-app-poweroff"
