--- a/config/x86_64/OpenWrt-K/extpackages.config
+++ b/config/x86_64/OpenWrt-K/extpackages.config
@@ -34,9 +34,9 @@ EXT_PACKAGES_NAME[9]="passwall-packages"
 EXT_PACKAGES_PATH[9]=""
 EXT_PACKAGES_REPOSITORIE[9]="https://github.com/77267132/passwall-packages"
 EXT_PACKAGES_BRANCH[9]=""
-EXT_PACKAGES_NAME[10]="passwall2"
+EXT_PACKAGES_NAME[10]="luci-app-passwall2"
 EXT_PACKAGES_PATH[10]="luci-app-passwall2"
-EXT_PACKAGES_REPOSITORIE[10]="https://github.com/77267132/passwall2"
+EXT_PACKAGES_REPOSITORIE[10]="https://github.com/77267132/package"
 EXT_PACKAGES_BRANCH[10]=""
 EXT_PACKAGES_NAME[11]="luci-app-poweroff"
 EXT_PACKAGES_PATH[11]="luci-app-poweroff"
