--- a/config/x86_64/OpenWrt-K/extpackages.config
+++ b/config/x86_64/OpenWrt-K/extpackages.config
@@ -106,3 +106,7 @@ EXT_PACKAGES_NAME[27]="luci-app-gowebdav"
 EXT_PACKAGES_PATH[27]="luci-app-gowebdav"
 EXT_PACKAGES_REPOSITORIE[27]="https://github.com/77267132/package"
 EXT_PACKAGES_BRANCH[27]=""
+EXT_PACKAGES_NAME[28]="luci-app-vsftpd"
+EXT_PACKAGES_PATH[28]="luci-app-vsftpd"
+EXT_PACKAGES_REPOSITORIE[28]="https://github.com/77267132/package"
+EXT_PACKAGES_BRANCH[28]=""
