--- a/config/x86_64/OpenWrt-K/extpackages.config
+++ b/config/x86_64/OpenWrt-K/extpackages.config
@@ -98,9 +98,9 @@ EXT_PACKAGES_NAME[25]="wrtbwmon"
 EXT_PACKAGES_PATH[25]="wrtbwmon"
 EXT_PACKAGES_REPOSITORIE[25]="https://github.com/brvphoenix/wrtbwmon"
 EXT_PACKAGES_BRANCH[25]=""
-EXT_PACKAGES_NAME[26]="luci-app-gowebdav"
-EXT_PACKAGES_PATH[26]="luci-app-gowebdav"
-EXT_PACKAGES_REPOSITORIE[26]="https://github.com/77267132/package"
+EXT_PACKAGES_NAME[26]="vsftpd-alt"
+EXT_PACKAGES_PATH[26]="package/lean/vsftpd-alt/"
+EXT_PACKAGES_REPOSITORIE[26]="https://github.com/coolsnowwolf/lede"
 EXT_PACKAGES_BRANCH[26]=""
 EXT_PACKAGES_NAME[27]="luci-app-vsftpd"
 EXT_PACKAGES_PATH[27]="luci-app-vsftpd"
