--- a/config/x86_64/OpenWrt-K/extpackages.config
+++ b/config/x86_64/OpenWrt-K/extpackages.config
@@ -38,8 +38,8 @@ EXT_PACKAGES_NAME[10]="luci-app-passwall2"
 EXT_PACKAGES_PATH[10]="luci-app-passwall2"
 EXT_PACKAGES_REPOSITORIE[10]="https://github.com/77267132/package"
 EXT_PACKAGES_BRANCH[10]=""
-EXT_PACKAGES_NAME[11]="luci-app-poweroff"
-EXT_PACKAGES_PATH[11]="luci-app-poweroff"
+EXT_PACKAGES_NAME[11]="luci-app-poweroffdevice"
+EXT_PACKAGES_PATH[11]="luci-app-poweroffdevice"
 EXT_PACKAGES_REPOSITORIE[11]="https://github.com/77267132/package"
 EXT_PACKAGES_BRANCH[11]=""
 EXT_PACKAGES_NAME[12]="luci-app-socat"
